--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitDemo</string>
+    <string name="add_1">+1</string>
+    <string name="sub_1">-1</string>
 </resources>
